--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: "Space Grotesk", sans-serif;
-  background-color: #190b1f;
+  background-color: #1f0d28;
 }
 
 h2 {
@@ -26,9 +26,12 @@ span {
   border-radius: 50%;
   pointer-events: none;
   z-index: 1;
-  background: radial-gradient(circle, rgba(178, 19, 202, 0.2), transparent 70%);
+  background: radial-gradient(circle, rgba(197, 86, 248, 0.2), transparent 70%);
 }
 
 .bg-primary-color {
-    @apply bg-purple-600
+    @apply bg-purple-300
+}
+.button-bg{
+  background: linear-gradient(45deg, #ea5ef9, #03c2ed);
 }
